Removed Oracle dependency and using OpenJDK instead